--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                 <span class="purple">Mahmood Hussain</span>
                 <div>and I am a passionate</div>
                 <span id="element"> Web Developer</span>
+                <div class="buttons">
+                    <button class="btn">Download Resume</button>
+                    <button class="btn">Vist Github</button>
+                </div>
             </div>
             <div class="rightsection">
                 <img src="https://res.cloudinary.com/dgrip7slk/image/upload/v1735877201/coding_vl1d0p.jpg" alt="image">
@@ -126,10 +130,13 @@
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed('#element', {
-            strings: [' Frontend Web Developer', 'Backend Developer', 'Wordpress Developer', 'Shopify Developer', ' Frontend Web Developer'],
+            strings: ['Frontend Web Developer', 'Backend Developer', 'WordPress Developer', 'Shopify Developer'],
             typeSpeed: 90,
+            backSpeed: 95, 
+            loop: true 
         });
     </script>
+    
 </body>
 
 </html>
